kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: uno-server
  namespace: uno
spec:
  selector:
    app: uno-server
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
