kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uno-server
  namespace: uno
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
    nginx.ingress.kubernetes.io/upstream-hash-by: "$request_uri"
spec:
  ingressClassName: nginx
  rules:
    - host: uno-ws.ryanemmick.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: uno-server
                port:
                  number: 80
    - host: uno.ryanemmick.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: uno-server
                port:
                  number: 80
